# VendorCheck

./: .gitignore  README.md  get-token.mjs  package-lock.json
.github/workflows/: deploy.yml
apps/api/: .env.example  main.py  pyproject.toml
apps/api/app/: auth.py  config.py  deps.py  errors.py  main.py
apps/api/app/db/: __init__.py  session.py  tenant.py
apps/api/app/models/: enums.py  orm.py  signal_types.py
apps/api/app/routes/: checks.py  documents.py  me.py  metrics.py  reviews.py  vendors.py
apps/api/app/schemas/: checks.py  documents.py  me.py  metrics.py  reviews.py  vendors.py
apps/api/app/services/: analysis.py  audit.py  checks.py  documents.py  metrics.py  reviews.py  storage.py  vendors.py  workflow.py  workspace.py
apps/api/tests/: conftest.py  test_analysis.py  test_checks.py  test_vendors_documents_metrics.py
apps/web/: .env.example  next.config.ts  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/components/: FAQ.tsx  FinalCTA.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  Problem.tsx  ProductPreview.tsx  UseCases.tsx  WhyDifferent.tsx
apps/web/components/: AuthGuard.tsx  SignalCard.tsx  VerdictBadge.tsx
apps/web/context/: auth-context.tsx
apps/web/lib/: api.ts  auth.ts  types.ts
apps/workers/: document_pipeline.py
db/migrations/: 001_init.sql  002_rls.sql  003_v1_consolidated.sql
db/seeds/: 001_dev_seed.sql
docs/: schema-rationale.md  v1-implementation-plan.md  v1-schema-and-api-contract.md
docs/architecture/: overview.md
infra/terraform/: README.md
(+32 files in other folders)
